13012
The {{serialization.scala}} regression test fails:

{code}
serialization.scala:18: error: type mismatch;
 found   : java.lang.Class[java.io.IOException]
 required: java.lang.Class forSome { type _$$1 }
  @throws(classOf[java.io.IOException])
          ^
serialization.scala:26: error: type mismatch;
 found   : java.lang.Class[java.io.IOException]
 required: java.lang.Class forSome { type _$$1 }
  @throws(classOf[java.io.IOException])
          ^
serialization.scala:27: error: type mismatch;
 found   : java.lang.Class[java.lang.ClassNotFoundException]
 required: java.lang.Class forSome { type _$$1 }
  @throws(classOf[ClassNotFoundException])
{code}

This test has been moved to pending until it is fixed.
